src/test/deca/syntax/valid/test_dir/added/parser/comments_with_decl.deca
{
  // This is a comment
  /* multi
  line
  comment */

  int i = 0;

  // This is a comment
  /* multi
  line
  comment */

}
