src/test/deca/syntax/invalid/parser/oracle/instr_before_decl.deca
{
  i = 5;
  int i;
}
